@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-08T01:48:26Z",
+  "timestamp" : "2022-09-08T08:20:26Z",
   "count_outdated" : 325,
   "uniques_outdated" : 169,
-  "count" : 340,
-  "uniques" : 179,
+  "count" : 341,
+  "uniques" : 180,
   "clones" : [
     {
       "timestamp": "2022-08-25T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-09-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
