@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 2,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2022-09-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
