@@ -1,3 +1,11 @@
+2022-09-08T08:20:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013543414
+* notice: last 14d: unq all: 2 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 169 325 / 179 340
+* notice: next accum: outdated-unq outdated-all / unq all: 169 325 / 180 341
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-08]
+
 2022-09-08T01:48:26Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3011930457
 * notice: last 14d: unq all: 2 15
